--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <!-- Top line -->
 
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header-container">
         <nav class="navigation">
           <a href="./index.html" class="logo link"
@@ -57,7 +57,7 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
 
     <main>
       <!-- Hero image -->
@@ -468,7 +468,7 @@
       </div>
     </footer>
     <!-- --------------Backdrop & Modal------------ -->
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <form class="form">
           <p class="modal-form-text">
@@ -542,8 +542,8 @@
         </button>
         <form class="modal-form"></form>
       </div>
-    </div>
+    </div> -->
 
-    <script src="./js/modal.js"></script>
+    <!-- <script src="./js/modal.js"></script> -->
   </body>
 </html>
