--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
   <body>
     <!-- Top line -->
 
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header-container">
         <nav class="navigation">
           <a href="./index.html" class="logo link"
@@ -52,10 +52,10 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
 
     <main>
-      <section class="portfolio">
+      <!-- <section class="portfolio">
         <div class="container">
           <h1 hidden class="visually-hidden">Portfolio</h1>
 
@@ -192,7 +192,6 @@
                     App · Cloud Storage App
                   </p>
                 </div>
-
                 <div class="portfolio-title-text">
                   <h2 class="benefits-title">Online Courses</h2>
                   <p class="benefits-text-portfolio">Marketing</p>
@@ -264,12 +263,12 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
 
     <!-- Footer -->
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer-container">
         <div class="footer-logo-container">
           <a href="./index.html" class="footer-logo link"
@@ -339,6 +338,6 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
