--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                 required
             /></label>
             <button type="submit" class="footer-form-subscribe-btn">
-              Submit
+              Subscribe
               <svg
                 class="footer-form-subscribe-btn-icon"
                 width="24"
