обнова перед сначей на проверку

--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
           <ul class="team-list list">
             <li class="team-list-item">
               <img
+                srcset="./images/images-main/mark-guerrero-2x.jpg 2x"
                 src="./images/images-main/mark-guerrero.jpg"
                 alt="man with black hair and beard in a shirt"
                 width="264"
@@ -284,6 +285,7 @@
             </li>
             <li class="team-list-item">
               <img
+                srcset="./images/images-main/tom-ford-2x.jpg 2x"
                 src="./images/images-main/tom-ford.jpg"
                 alt="man with light brown hair and stubble in a shirt"
                 width="264"
@@ -326,6 +328,7 @@
             </li>
             <li class="team-list-item">
               <img
+                srcset="./images/images-main/camila-garcia-2x.jpg 2x"
                 src="./images/images-main/camila-garcia.jpg"
                 alt="girl with black hair in a pink sweater"
                 width="264"
@@ -368,6 +371,7 @@
             </li>
             <li class="team-list-item">
               <img
+                srcset="./images/images-main/daniel-wilson-2x.jpg 2x"
                 src="./images/images-main/daniel-wilson.jpg"
                 alt="man with light brown hair and stubble in a t-shirt"
                 width="264"
