--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
         <form class="modal-form"></form>
       </div>
     </div>
-    <script src="./js/menu.js"></script>
+    <script src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
   </body>
 </html>
